2018-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Support legacy keyword
	'color-profile' for ICC color profile as was used by ImageMagick
	4.2.9.

	* coders/mpc.c (ReadMPCImage): Require that first keyword/value be
	id=MagickCache

	* coders/miff.c (ReadMIFFImage): Require that first keyword/value
	be id=ImageMagick.

2018-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadElement): Add more size checks.

	* coders/jnx.c (ExtractTileJPG): Enforce that JPEG tiles are read
	by the JPEG coder.  Fixes oss-fuzz 10147
	"graphicsmagick/coder_JNX_fuzzer: Use-of-uninitialized-value in
	funcDCM_PhotometricInterpretation". (Credit to OSS-Fuzz)

2018-09-10  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Zero fill raster error recovery.

2018-08-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPrimitiveToPath): Second attempt to
	prevent heap write overflow of PathInfo array.  Fixes oss-fuzz
	10096 "Heap-buffer-overflow in ConvertPrimitiveToPath". (Credit to
	OSS-Fuzz)

2018-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c ("QuantumTransferMode"): CIE Log images with an
	alpha channel are not supported.  Fixes oss-fuzz 10013
	"graphicsmagick/coder_TIFF_fuzzer: Use-of-uninitialized-value in
	DisassociateAlphaRegion". (Credit to OSS-Fuzz)

	* magick/render.c (DrawImage): SetImageAttribute() appends new
	text to any existing value, leading to every increasing memory
	consumption if the existing value is not deleted first by the
	unwary.  Fixes oss-fuzz 9983 "graphicsmagick/coder_MVG_fuzzer:
	Timeout in graphicsmagick_coder_MVG_fuzzer" and oss-fuzz 10016
	"graphicsmagick/coder_MVG_fuzzer: Out-of-memory in
	graphicsmagick_coder_MVG_fuzzer". (Credit to OSS-Fuzz)

	* magick/utility.c (TranslateTextEx): Fix off-by-one in loop
	bounds check which allowed a one-byte stack write overflow.  Fixes
	oss-fuzz 10055 "graphicsmagick/coder_MVG_fuzzer: