@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180908"
-#define public MagickPackageReleaseDate "snapshot-20180908"
+#define public MagickPackageVersionAddendum ".020180909"
+#define public MagickPackageReleaseDate "snapshot-20180909"
