@@ -1,3 +1,13 @@
+2018-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/miff.c (ReadMIFFImage): Fix leak of 'values' buffer due
+	to change made yesterday.
+
+	* coders/mpc.c (ReadMPCImage): Fix leak of 'values' buffer due to
+	change made yesterday.  Fixes oss-fuzz 10277
+	"graphicsmagick/coder_MPC_fuzzer: Direct-leak in
+	ReadMPCImage". (Credit to OSS-Fuzz)
+
 2018-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/miff.c (ReadMIFFImage): Support legacy keyword
